@@ -22,6 +22,7 @@ package org.airsonic.player.util;
 
 import org.airsonic.player.spring.WebsocketConfiguration;
 import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.Strings;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.messaging.simp.SimpMessageHeaderAccessor;
@@ -114,11 +115,11 @@ public class NetworkUtil {
     }
 
     private static boolean isValidXForwardedHost(String xForwardedHost) {
-        return StringUtils.isNotBlank(xForwardedHost) && !StringUtils.equals("null", xForwardedHost);
+        return StringUtils.isNotBlank(xForwardedHost) && !Strings.CS.equals("null", xForwardedHost);
     }
 
-    private static URI calculateNonProxyUri(HttpServletRequest request) throws MalformedURLException, URISyntaxException {
-        URL url = new URL(request.getRequestURL().toString());
+    private static URI calculateNonProxyUri(HttpServletRequest request) throws URISyntaxException, MalformedURLException {
+        URL url = URI.create(request.getRequestURL().toString()).toURL();
         String host = url.getHost();
         String scheme = url.getProtocol();
         int port = url.getPort();
@@ -134,9 +135,9 @@ public class NetworkUtil {
      */
     public static boolean isValidUrl(String url) {
         try {
-            new URL(url).toURI();
+            URI.create(url).toURL();
             return true;
-        } catch (MalformedURLException | URISyntaxException e) {
+        } catch (Exception e) {
             return false;
         }
     }
